--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       background-position: center left;
       background-repeat: no-repeat;
       background-size: cover;
-      min-height: 65vh;
+      /* min-height: 65vh; */
       /* background-color: white; */
     }
   </style>
