--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- Credit: http://stackoverflow.com/questions/22196587/how-to-center-align-vertically-the-container-in-bootstrap -->
-  <title>Bootstraped</title>
+  <title>Bootstrap Centered Jumbotron</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,9 +18,11 @@
       background-position: center left;
       background-repeat: no-repeat;
       background-size: cover;
-      /* min-height: 65vh; */
+
+      /* 1min-height: 65vh; */
       /* background-color: white; */
     }
+    
   </style>
 </head>
 <div class="container-fluid text-center">
